@@ -1,12 +1,6 @@
 SUBDIRS = po src data misc contrib
 
-INTLTOOL =                      \
-	intltool-extract.in     \
-	intltool-merge.in       \
-	intltool-update.in
-
 EXTRA_DIST =			\
-	$(INTLTOOL)             \
 	autogen.sh		\
 	misc/devhelp.el	        \
 	misc/html2funcs.py	\
