@@ -1,5 +1,9 @@
 2008-10-01  Richard Hult  <richard@imendio.com>
 
+	* Makefile.am: Adapt to recent intltool changes.
+
+2008-10-01  Richard Hult  <richard@imendio.com>
+
 	* configure.in:
 	* Makefile.am:
 	* data/Makefile.am: Move pc file to data/.
